# HF-Production-ML

./: .gitignore  .pmat-metrics.toml  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
.pmat-metrics/: commit-142b720-meta.json  commit-1b61639-meta.json
demos/week1/: Cargo.toml
demos/week1/src/: lib.rs
demos/week1/tests/: integration_tests.rs
demos/week2/: Cargo.toml
demos/week2/src/: lib.rs
demos/week2/tests/: integration_tests.rs
demos/week3/: Cargo.toml
demos/week3/apr-explorer/: Cargo.toml  Makefile  generate_sample.py
demos/week3/apr-explorer/src/: apr.rs  browser.rs  dom.rs  driver.rs  lib.rs
demos/week3/apr-explorer/tests/: e2e_apr1.rs
demos/week3/apr-explorer/www/: index.html  sample-mlp.apr  sample-transformer.apr
demos/week3/depyler-demo/: .gitignore  DEMO.md  Makefile  fibonacci.py  pyproject.toml  test_fibonacci.py
demos/week3/qwen-showcase-demo/: .gitignore  DEMO.md  Makefile
demos/week3/src/: lib.rs
demos/week3/tests/: integration_tests.rs
demos/week3/whisper-cli-demo/: .gitignore  DEMO.md  Makefile
docs/: lesson-structure.md  lesson-structure.txt  outline.md
docs/readings/: 0.0-course-introduction-resources.md  1.1-course-intro-hf-publishing.md  1.2-model-types-apr-format.md  1.3-format-comparison-tracing.md  4.0-capstone-multi-format-deployment.md
docs/roadmaps/: roadmap.yaml
docs/scripts/: .gitignore
docs/specifications/: hf-ml-prod-demos.md
transcripts/: 1.0-course-intro.json  1.3-hg-model-publish.json  1.4-model-types-hf.json  1.5-apr-format.json  1.6-mode-format-compare.json  1.9-why-trace-models.json  2.1-model-registery.json  2.2-cicd-pipeline-ml.json  2.3-model-observability-stack.json  2.4-model-signing-security.json  2.5-binary-deployment-patterns.json  2.6-inference-server-architecture.json  2.8-corpus-management-dataops.json  2.9-cost-performance-decision-matrix.json  3.10-apr-hub-spoke.json  3.11-apr-chat-demo.json  3.2-four-projects-one-stack.json  3.20-course-conclusion.json  3.3-depyler-deep-dive.json  3.4-depyler-oracle.json  3.5-depyler-single-shot-compile.json  3.6-whisper-overiew.json  3.7-whisper-code-walkthrough.json  3.8-whisper-demo.json  3.9-apr-format-rosetta.json
