[workspace]
resolver = "2"
members = [
    "demos/week1",
    "demos/week2",
    "demos/week3",
    "demos/week3/apr-explorer",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.83.0"
license = "Apache-2.0"
repository = "https://github.com/paiml/HF-Production-ML"

[workspace.dependencies]
# Sovereign AI Stack
trueno = "0.13"
aprender = "0.24"
realizar = "0.6"
batuta = "0.5"
presentar = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "54"
parquet = "54"

# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# Async
tokio = { version = "1.43", features = ["full"] }
axum = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Testing
criterion = "0.5"
proptest = "1.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
