[package]
name = "apr-explorer"
version = "0.1.0"
edition = "2021"
description = "Interactive APR model explorer - runs in browser via WASM"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]

[dependencies]
# Serialization (always needed)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression (pure Rust, works in WASM)
ruzstd = "0.7"

# WASM bindings (only with wasm feature)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Performance",
] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
