[project]
name = "depyler-demo"
version = "0.1.0"
description = "Depyler single-shot transpile demo"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["."]
omit = ["test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]
